--- a/scss/override_variables.scss
+++ b/scss/override_variables.scss
@@ -1,3 +1,29 @@
-$headings-color: #D04F4F;
+//$headings-color: #D04F4F;
+//$font-size-base: 0.9rem;
 
-$font-size-base: 0.9rem;
+$enable-negative-margins: true;
+
+$h1-font-size: 2.25rem;
+$h2-font-size: 1.125rem;
+
+$font-sizes: (
+        2: $h2-font-size,
+        6: 0.75rem
+);
+
+$card-bg: #E7E7E7;
+//$card-border-width: 0;
+
+$input-bg: #E7E7E7;
+$input-font-size: 1.125rem;
+
+$primary: #3282F7;
+$success: #68D9A4;
+$danger: #ED6454;
+
+$btn-close-height: 2.25rem;
+$btn-close-color: white;
+$btn-close-bg: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$btn-close-color}" class="bi bi-x-circle" viewBox="0 0 16 16"> <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/> <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/></svg>');
+$btn-close-opacity: 1;
+
+$alert-padding-y: 0;
