--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
 @import 'override_variables';
 @import '../node_modules/bootstrap/scss/bootstrap';
+@import 'utils';
+@import 'general';
 @import 'components';
