--- a/css/style.css
+++ b/css/style.css
@@ -11662,4 +11662,15 @@ h1, .h1 {
   height: 4.25rem;
 }
 
+.dropdown-toggle::after {
+  border-top: 0;
+  border-right: 0;
+  border-left: 0.2rem solid white;
+  border-bottom: 0.2rem solid white;
+  width: 0.7rem;
+  height: 0.7rem;
+  transform: rotate(-45deg);
+  margin-left: 2rem;
+}
+
 /*# sourceMappingURL=style.css.map */
