--- a/scss/components.scss
+++ b/scss/components.scss
@@ -37,6 +37,17 @@
   height: 4.25rem;
 }
 
+.dropdown-toggle::after{
+  border-top: 0;
+  border-right: 0;
+  border-left: 0.2rem solid white;
+  border-bottom: 0.2rem solid white;
+  width: 0.7rem;
+  height: 0.7rem;
+  transform: rotate(-45deg);
+  margin-left: 2rem;
+}
+
 //.bi-clock {
 //  font-size: 1.25rem;
 //  line-height: 1.25rem;
