--- a/css/style.css
+++ b/css/style.css
@@ -11631,6 +11631,11 @@ h1, .h1 {
   color: #D04F4F;
 }
 
+.search-hint {
+  text-align: center;
+  font-size: 1.2rem;
+}
+
 .card-placeholder {
   height: 11.125rem;
   background-color: #C7BEBE;
