--- a/scss/components.scss
+++ b/scss/components.scss
@@ -1,3 +1,8 @@
+.search-hint {
+  text-align: center;
+  font-size: 1.2rem;
+}
+
 .card-placeholder {
   height: 11.125rem;
   background-color: #C7BEBE;
