--- a/scss/components.scss
+++ b/scss/components.scss
@@ -105,11 +105,13 @@
   //We need to override the inline style injected by Bootstrap with JavaScript
   margin-top: -4.375rem !important;
   margin-left: -0.05rem !important;
-  max-height: 40rem;
-  overflow-y: auto;
-  overflow-x: hidden;
-  &::-webkit-scrollbar {
-    width: 0.1rem;
+  .inventory{
+    max-height: 30rem;
+    overflow-y: auto;
+    overflow-x: hidden;
+    &::-webkit-scrollbar {
+      width: 0.1rem;
+    }
   }
 }
 
